@@ -7,6 +7,7 @@
  * Description : a dialog to edit GPS positions
  *
  * Copyright (C) 2006-2009 by Gilles Caulier <caulier dot gilles at gmail dot com>
+ * Copyright (C) 2010 by Michael G. Hansen <mike at mghansen dot de>
  *
  * This program is free software; you can redistribute it
  * and/or modify it under the terms of the GNU General
@@ -59,6 +60,7 @@ protected Q_SLOTS:
     void slotHelp();
     void slotBookmarkSelected(GPSDataContainer position);
     void slotRecentSelected(QAction* action);
+    void slotConfigActionTriggered(QAction* action);
 
 protected:
 
